--- a/socialize-backend/package.json
+++ b/socialize-backend/package.json
@@ -10,9 +10,11 @@
   "author": "jahir509",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.5",
+    "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.3"
   }
